fixed main menu display on mobile

--- a/_responsive.sass
+++ b/_responsive.sass
@@ -18,6 +18,10 @@
             left: 30%
             right: 30%
 
+    .main-menu
+        .navbar-nav
+            margin-left: auto
+
     .mismatched-columns
         grid-template-columns: repeat(5, 1fr)
 
@@ -29,8 +33,8 @@
 
     .page-heading
         &__subtitle
-            margin-top: 0
             margin-left: 60px
+            margin-top: 0
 
     .footer
         text-align: left
