--- a/style.sass
+++ b/style.sass
@@ -137,7 +137,6 @@ header
                 background-color: $color-secondary
 
 .header
-
     &__title
         @extend %font-normal
         text-align: center
@@ -227,6 +226,9 @@ header
 
 .main-menu
     background-color: $color-primary
+
+    .navbar-nav
+        margin-left: 0
 
     .nav-item
         margin-left: 15px
